# doc2dataset

./: 3dcf_doc2dataset_spec.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
bench/: README.md
bench/plots/: accuracy_vs_macrotokens.py  precision_vs_compression.py
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: bench.rs  chunk.rs  decoder.rs  document.rs  embedding.rs  encoder.rs  error.rs  ingest.rs  lib.rs  metrics.rs  normalization.rs  numguard.rs  ocr.rs  serializer.rs  stats.rs
crates/core/src/snapshots/: three_dcf_core__serializer__tests__snapshot_serialization_csv_mode.snap  three_dcf_core__serializer__tests__snapshot_serialization_dims_mode.snap
crates/core/tests/: property_roundtrip.rs  roundtrip.rs
crates/doc2dataset/: Cargo.toml
crates/doc2dataset/src/: cli.rs  config.rs  ingest.rs  logging.rs  main.rs  model.rs  quickstart.rs  run.rs  tasks.rs
crates/doc2dataset/src/convert/: bib.rs  html.rs  log.rs  mod.rs  rtf.rs  structured.rs  tabular.rs  tex.rs
crates/doc2dataset/src/export/: axolotl.rs  hf.rs  llama_factory.rs  mod.rs  openai.rs  rag.rs
crates/ffi-node/: Cargo.toml  README.md
crates/ffi-node/src/: lib.rs
crates/ffi-py/: Cargo.toml  README.md
crates/ffi-py/src/: lib.rs
crates/index/: Cargo.toml
crates/index/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/rag/: Cargo.toml
crates/rag/src/: embedding.rs  encryption.rs  lib.rs  pipeline.rs  pricing.rs  sensitivity.rs  store.rs
crates/service/: Cargo.toml
crates/service/src/: main.rs
datasets/: README.md
datasets/sample/: sample_report.md
recipes/3dcf-recipes/: README.md
recipes/3dcf-recipes/http-service-client/: README.md  client.py
recipes/3dcf-recipes/langchain-rag/: README.md  llama_index.py  loader.py
recipes/3dcf-recipes/numguard-demo/: README.md  main.py
recipes/3dcf-recipes/openai-qa/: README.md  main.py
ui/: README.md  index.html
