[package]
name = "three_dcf_cli"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
rand = "0.8"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
three_dcf_core = { path = "../core" }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir = "2"
hex.workspace = true
age.workspace = true
secrecy.workspace = true
bincode = "1.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
sha2 = "0.10"
rayon = "1"
three_dcf_rag = { path = "../rag" }
glob = "0.3"

[features]
default = ["core_default"]
core_default = ["three_dcf_core/default"]
pdfium = ["three_dcf_core/pdfium"]
ocr = ["three_dcf_core/ocr"]
