[package]
name = "three_dcf_core"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = ["text"]
pdfium = ["dep:pdfium-render"]
ocr = ["dep:leptess"]
text = []

[dependencies]
anyhow.workspace = true
blake3.workspace = true
bytes.workspace = true
hdrhistogram.workspace = true
html2text.workspace = true
image.workspace = true
hex.workspace = true
itertools.workspace = true
leptess = { version = "0.5", optional = true }
pulldown-cmark.workspace = true
prost.workspace = true
prost-types.workspace = true
pdf-extract.workspace = true
rayon.workspace = true
regex.workspace = true
rstar.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true
tiktoken-rs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zstd.workspace = true
strsim.workspace = true
base64.workspace = true
rustc-hash.workspace = true
sysinfo.workspace = true
three_dcf_index = { path = "../index" }

chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
insta = { version = "1", features = ["yaml"], optional = true }
lopdf = "0.34"
once_cell = "1"
rand = "0.8"
tempfile = "3"
unicode-normalization = "0.1"
unicode-segmentation = "1"
walkdir = "2"

# Optional native integrations
pdfium-render = { version = "0.8", optional = true }

[dev-dependencies]
proptest = "1"
insta = { version = "1", features = ["yaml"] }
serde_json.workspace = true

[build-dependencies]
prost-build = "0.12"
protoc-bin-vendored = "3"
